move @ngx-admin into their namespace

--- a/src/TfxMiniCasherWwwUI/src/styles.scss
+++ b/src/TfxMiniCasherWwwUI/src/styles.scss
@@ -3,4 +3,4 @@
 @import '~leaflet/dist/leaflet';
 @import '~nebular-icons/scss/nebular-icons';
 @import '~pace-js/themes/red/pace-theme-flash';
-@import './app/@theme/styles/styles';
+@import './app/@ngx-admin/@theme/styles/styles';
