--- a/src/TfxMiniCasherWwwUI/src/app/management/components/account-manager.component.html
+++ b/src/TfxMiniCasherWwwUI/src/app/management/components/account-manager.component.html
@@ -1,1 +1,43 @@
-<h1>ACCOUNT MANAGER</h1>
+<page-header heading="Account manager"></page-header>
+
+<nb-card>
+  <nb-card-header>
+    Accounts
+  </nb-card-header>
+  <nb-card-body>
+    <ng-container *ngIf="accounts; else empty">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Account ID</th>
+            <th>Account code</th>
+            <th>Account name</th>
+            <th>Debit or Credit</th>
+            <th>Current balance</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let account of accounts">
+            <td>{{account.id}}</td>
+            <td>{{account.code}}</td>
+            <td>{{account.name}}</td>
+            <td>{{account.debitOrCredit}}</td>
+            <td>0</td>
+            <td>
+              <a href="" title="Edit"><nb-icon icon="edit" pack="far"></nb-icon></a>
+              &nbsp;
+              <a href="" title="Delete"><nb-icon icon="trash" pack="far"></nb-icon></a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </ng-container>
+  </nb-card-body>
+</nb-card>
+
+<ng-template #empty>
+  <div>
+    There is no data to display.
+  </div>
+</ng-template>
