Account create form | TFX-118 [MINICASHER] Account manager page

--- a/src/TfxMiniCasherWwwUI/src/app/management/components/account-manager.component.html
+++ b/src/TfxMiniCasherWwwUI/src/app/management/components/account-manager.component.html
@@ -1,4 +1,6 @@
-<page-header heading="Account manager"></page-header>
+<page-header heading="Account manager">
+  <button href="management/account/create" nbButton status="primary" (click)="onCreateClick()"><nb-icon icon="plus" pack="far"></nb-icon>New</button>
+</page-header>
 
 <nb-card>
   <nb-card-header>
