--- a/src/TfxMiniCasherWwwUI/src/app/@extend/components/page-header.component.html
+++ b/src/TfxMiniCasherWwwUI/src/app/@extend/components/page-header.component.html
@@ -1,5 +1,10 @@
 <nb-card>
   <nb-card-header>
-    <h1>{{heading}}</h1>
+    <div class="left_column">
+      <h1>{{heading}}</h1>
+    </div>
+    <div class="right_column">
+      <ng-content></ng-content>
+    </div>
   </nb-card-header>
 </nb-card>
