AccountEdit form | TFX-118 [MINICASHER] Account manager page

--- a/src/TfxMiniCasherWwwUI/src/app/management/components/shared/account-edit-dialog.component.html
+++ b/src/TfxMiniCasherWwwUI/src/app/management/components/shared/account-edit-dialog.component.html
@@ -1,6 +1,6 @@
 <nb-card class="dialog-card">
   <nb-card-header>
-    Create account
+    Edit account: {{accountId}}
   </nb-card-header>
   <nb-card-body>
     <form *ngIf="isDataLoaded; else loading" [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
