--- a/src/TfxMiniCasherWwwUI/src/app/management/components/account-manager.component.html
+++ b/src/TfxMiniCasherWwwUI/src/app/management/components/account-manager.component.html
@@ -27,7 +27,7 @@
             <td>{{account.debitOrCredit}}</td>
             <td>0</td>
             <td>
-              <a href="" title="Edit"><nb-icon icon="edit" pack="far"></nb-icon></a>
+              <a (click)="onItemEditClick(account.id)" href="javascript:void(0)" title="Edit"><nb-icon icon="edit" pack="far"></nb-icon></a>
               &nbsp;
               <a href="" title="Delete"><nb-icon icon="trash" pack="far"></nb-icon></a>
             </td>
