TransactionCreate form | TFX-119 [MINICASHER] General ledger page

--- a/src/TfxMiniCasherWwwUI/src/app/transaction/components/general-ledger.component.html
+++ b/src/TfxMiniCasherWwwUI/src/app/transaction/components/general-ledger.component.html
@@ -1,5 +1,5 @@
 <page-header heading="General ledger">
-  <button nbButton status="primary"><nb-icon icon="plus" pack="far"></nb-icon>New</button>
+  <button nbButton status="primary" (click)="onCreateClick()"><nb-icon icon="plus" pack="far"></nb-icon>New</button>
 </page-header>
 
 <nb-card>
