--- a/src/TfxMiniCasherWwwUI/src/app/transaction/components/general-ledger.component.html
+++ b/src/TfxMiniCasherWwwUI/src/app/transaction/components/general-ledger.component.html
@@ -26,7 +26,7 @@
         <td>{{transaction.amount.toFixed(2)}}</td>
         <td>{{transaction.issuedTime}}</td>
         <td>
-          <a href="javascript:void(0)" title="Edit"><nb-icon icon="edit" pack="far"></nb-icon></a>
+          <a (click)="onItemEditClick(transaction.id)" href="javascript:void(0)" title="Edit"><nb-icon icon="edit" pack="far"></nb-icon></a>
           &nbsp;
           <a href="javascript:void(0)" title="Delete"><nb-icon icon="trash" pack="far"></nb-icon></a>
         </td>
