--- a/src/TfxMiniCasherWwwUI/src/app/transaction/components/shared/transaction-create-dialog.component.html
+++ b/src/TfxMiniCasherWwwUI/src/app/transaction/components/shared/transaction-create-dialog.component.html
@@ -1,40 +1,31 @@
-<nb-card class="dialog-card">
-  <nb-card-header>
-    Create transaction
-  </nb-card-header>
-  <nb-card-body>
-    <form *ngIf="isDataLoaded; else loading" [formGroup]="form" (ngSubmit)="onFormSubmit(form.value)">
-      <div class="form-group">
-        <label class="label" for="transaction_create__name">Transaction name</label>
-        <input formControlName="name" fullWidth id="transaction_create__name" name="transaction_name" nbInput placeholder="" type="text" />
+<remote-data-card className="dialog-card" [isLoaded]="isDataLoaded" [isWaiting]="isDataSubmitting" hasFooter="true" title="Create transaction">
+  <form [formGroup]="form" (ngSubmit)="onFormSubmit(form.value)">
+    <div class="form-group">
+      <label class="label" for="transaction_create__name">Transaction name</label>
+      <input formControlName="name" fullWidth id="transaction_create__name" name="transaction_name" nbInput placeholder="" type="text" />
+    </div>
+    <div class="form-group">
+      <label class="label" for="transaction_create__amount">Transaction amount</label>
+      <input formControlName="amount" fullWidth id="transaction_create__amount" name="transaction_amount" nbInput placeholder="" type="number" />
+    </div>
+    <div class="form-group row">
+      <div class="col-md-6">
+        <div><label class="label">Debit account</label></div>
+        <nb-select formControlName="debitAccountId" fullWidth id="transaction_create__debit_account_id" name="transaction_debit_account_id">
+          <nb-option *ngFor="let option of debitAccountOptions" [value]="option.key">{{option.value}}</nb-option>
+        </nb-select>
       </div>
-      <div class="form-group">
-        <label class="label" for="transaction_create__amount">Transaction amount</label>
-        <input formControlName="amount" fullWidth id="transaction_create__amount" name="transaction_amount" nbInput placeholder="" type="number" />
+      <div class="col-md-6">
+        <div><label class="label">Credit account</label></div>
+        <nb-select formControlName="creditAccountId" fullWidth id="transaction_create__credit_account_id" name="transaction_credit_account_id">
+          <nb-option *ngFor="let option of creditAccountOptions" [value]="option.key">{{option.value}}</nb-option>
+        </nb-select>
       </div>
-      <div class="form-group row">
-        <div class="col-md-6">
-          <div><label class="label">Debit account</label></div>
-          <nb-select formControlName="debitAccountId" fullWidth id="transaction_create__debit_account_id" name="transaction_debit_account_id">
-            <nb-option *ngFor="let option of debitAccountOptions" [value]="option.key">{{option.value}}</nb-option>
-          </nb-select>
-        </div>
-        <div class="col-md-6">
-          <div><label class="label">Credit account</label></div>
-          <nb-select formControlName="creditAccountId" fullWidth id="transaction_create__credit_account_id" name="transaction_credit_account_id">
-            <nb-option *ngFor="let option of creditAccountOptions" [value]="option.key">{{option.value}}</nb-option>
-          </nb-select>
-        </div>
-      </div>
-    </form>
-  </nb-card-body>
-  <nb-card-footer class="text-right">
-    <button nbButton status="primary" (click)="onSubmitClick()">Submit</button>
+    </div>
+  </form>
+  <ng-container footer>
+    <button (click)="onSubmitClick()" [disabled]="!isDataLoaded || isDataSubmitting" nbButton status="primary">Submit</button>
     &nbsp;
-    <button nbButton status="basic" (click)="onCancelClick()">Cancel</button>
-  </nb-card-footer>
-</nb-card>
-
-<ng-template #loading>
-  Loading data...
-</ng-template>
+    <button (click)="onCancelClick()" nbButton status="basic">Cancel</button>
+  </ng-container>
+</remote-data-card>
